--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?gydjrizha#1" target="_blank">首页</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/1?ormefiw" target="_blank">动态网</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/2?kzyaocp" target="_blank">大纪元</a> | <a href="https://d3caox32lipp7h.cloudfront.net/4?zadro" target="_blank">看中国</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/pHh5q?zzflpdhrf" target="_blank">新生网</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/tktpt?jptpjmvv" target="_blank">阿波罗网</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/Mjpvu?nhzusdcpb" target="_blank">干净世界</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/10?haxgulmc" target="_blank">退党服务</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/Rffqf?wsziqnjou" target="_blank">明慧广播</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/nw9Vn?pdyhlcxh" target="_blank">传奇时代</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/AF9AG?irzrfikog" target="_blank">新境界影视</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/zqMQA?rayij" target="_blank">文昭谈论</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/7?bqjnxzu" target="_blank">明慧</a></p><p><a href="https://d11leod1im7q2u.cloudfront.net/9?komted" target="_blank">大法</a> | <a href="https://d3myewunzonann.cloudfront.net/3?tcwrkp" target="_blank">新唐人</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/obAhT?fahmutc" target="_blank">人民报</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/xXNHu?cqlfhm" target="_blank">放光明</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/5?waosxad" target="_blank">新纪元</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/6?upnbsck" target="_blank">希望之声</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/11?rbplehf" target="_blank">无界网络</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/Pueji?xtxpwsji" target="_blank">追查国际</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/16?vctknbhw" target="_blank">明慧之窗</a> | <a href="https://d337p4rc38c0de.cloudfront.net/LdvzZ?jdfnclwq" target="_blank">细语人生</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/fBn3r?ewmut" target="_blank">新世纪影视</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/PUWMb?snvsdnmh" target="_blank">江峰时刻</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/8?hemgjuld" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268624-GettyImages-2149657724_light-320x200.jpg"><p align="center">老干部12年三度促中共退场 专家：政局胶着</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1" title="老干部12年三度促中共退场 专家：政局胶着""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268624-GettyImages-2149657724_light-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?rlxwrhv#1" target="_blank">首页</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/1?zwzjk" target="_blank">动态网</a> | <a href="https://d337p4rc38c0de.cloudfront.net/2?glshq" target="_blank">大纪元</a> | <a href="https://d3vg08phoazui6.cloudfront.net/4?ssjjf" target="_blank">看中国</a> | <a href="https://dervszfjn9udk.cloudfront.net/pHh5q?utqkus" target="_blank">新生网</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/tktpt?sfjgkpbzk" target="_blank">阿波罗网</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/Mjpvu?nvscjah" target="_blank">干净世界</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/10?cthalx" target="_blank">退党服务</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/Rffqf?uutxj" target="_blank">明慧广播</a> | <a href="https://di88ceki78g29.cloudfront.net/nw9Vn?dirtdg" target="_blank">传奇时代</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/AF9AG?wfavqbfhw" target="_blank">新境界影视</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/zqMQA?klwxud" target="_blank">文昭谈论</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/7?wbxjox" target="_blank">明慧</a></p><p><a href="https://d3q99y09eaol9n.cloudfront.net/9?degqhbwy" target="_blank">大法</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/3?hxwqzyof" target="_blank">新唐人</a> | <a href="https://d3bo5docy69ast.cloudfront.net/obAhT?hzjajzfpv" target="_blank">人民报</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/xXNHu?rvqfqw" target="_blank">放光明</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/5?mamamv" target="_blank">新纪元</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/6?lipml" target="_blank">希望之声</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/11?tklodmurk" target="_blank">无界网络</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/Pueji?gsgdlcsug" target="_blank">追查国际</a> | <a href="https://dvucua6a0b85v.cloudfront.net/16?pgyjkzlm" target="_blank">明慧之窗</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/LdvzZ?piattcane" target="_blank">细语人生</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/fBn3r?gxwnksh" target="_blank">新世纪影视</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/PUWMb?uigkfltp" target="_blank">江峰时刻</a> | <a href="https://d2184d78prq5kd.cloudfront.net/8?vfbgxg" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268624-GettyImages-2149657724_light-320x200.jpg"><p align="center">老干部十二年三促中共退场 专家：政局胶着</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1" title="老干部十二年三促中共退场 专家：政局胶着""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268624-GettyImages-2149657724_light-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310289.md#1" title="大陆法拍房数量再攀升 上海现5.6折法拍房""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14145219-28_id13987493-000_9N34E7-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1" title="【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14310047-1080-800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310243.md#1" title="扮警察向中国富商勒索巨款 4男子被美起诉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147013-GettyImages-1186593421-320x200.jpg">&nbsp;</a>
@@ -13,24 +13,23 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1" title="洛杉矶突发4.4级地震 震感强烈 房子晃动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309961-1-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309918.md#1" title="硅谷富豪纷纷捐款给贺锦丽和川普""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14306049-Harris-Trump-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310548.md#1">摩根士丹利再剔除60只中国股票 缩小指数比重</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310555.md#1">【翻墙必看】深圳五折卖房很久了</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310533.md#1">反对数字牢笼 洛杉矶华人怒谴中共推网证</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310497.md#1">【十字路口】中国经济七大警讯 台商外商快逃</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310435.md#1">江苏东海“循环经济”让废旧部件重获新生背后</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310548.md#1">摩根士丹利再剔除60只中国股票 缩小指数比重</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310555.md#1">【翻墙必看】深圳五折卖房很久了</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310533.md#1">反对数字牢笼 洛杉矶华人怒谴中共推网证</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310497.md#1">【十字路口】中国经济七大警讯 台商外商快逃</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310435.md#1">江苏东海“循环经济”让废旧部件重获新生背后</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310439.md#1">深圳惊现五折卖房 中介：该项目已卖了很久</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310248.md#1">纽约反中共渗透图片展 华人热议王书君案</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310454.md#1">荷莉贝瑞拍片学会多种武术 陆续断过10根骨头</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310434.md#1">中国大唐黑龙江发电公司前总经理张春雷落马</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310454.md#1">荷莉贝瑞拍片学会多种武术 陆续断过10根骨头</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310434.md#1">中国大唐黑龙江发电公司前总经理张春雷落马</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310480.md#1">8.18流水式集会案｜彭定康批定罪不公正</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309508.md#1">中共高层隐身 传闻四起 分析：人心思变</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309017.md#1">地方债近100万亿 专家：中共不够钱付利息</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309516.md#1">人大教授再发信吁中共退场 建联邦共和国</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308775.md#1">美F-35战机参加竹鹰演习 为太平洋冲突备战？</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308935.md#1">大陆“零食之王”利润下滑89% 股价跌破发行价</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308916.md#1">【翻墙必看】上海医院主任谈新冠重症病例</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309562.md#1">医生涉山西奥瑞买尸案 牵出“案中案”？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308916.md#1">【翻墙必看】上海医院主任谈新冠重症病例</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309575.md#1">中国内需疲软 跨国企业：消费信心极低</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309184.md#1">消费下滑 深圳餐厅价格战 顾客：便宜是王道</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -46,7 +45,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309911.md#1">杨威：盘点中美奥运金银铜牌的成色</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309958.md#1">王赫：中国为何陷入结婚低谷？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309980.md#1">王友群：文革中的一起“通天”大案</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1">老干部12年三度促中共退场 专家：政局胶着</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310358.md#1">老干部十二年三促中共退场 专家：政局胶着</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309780.md#1">美中奥运金牌数相同 分析：体育体制大不同</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310274.md#1">专家：中共推“网证”反映政权的不安全感</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309846.md#1">高智晟被失踪7年 耿和：只求知道他的死活</a><br>
@@ -107,8 +106,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307029.md#1">【新闻大破解】美股反转？联准会与华尔街博弈</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307032.md#1">美全方位打击中共渗透 华人如何应对中共诱惑</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d10msvax936kln.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d10msvax936kln.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d10msvax936kln.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3c4mofr5sq8yz.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3c4mofr5sq8yz.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
